updates for security and ease
.env variables use and easier date filter input

--- a/arxiv_literature_review_toolkit.ipynb
+++ b/arxiv_literature_review_toolkit.ipynb
@@ -15,10 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ae0369f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'feedparser' is already installed.\n"
+     ]
+    }
+   ],
    "source": [
     "# === SECTION: INSTALL AND IMPORT DEPENDENCIES ===\n",
     "# Commented out: pip install feedparser if not present\n",
@@ -45,26 +53,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "228ec081",
+   "execution_count": 2,
+   "id": "4bd788c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Output folders are set up and ready.\n"
+     ]
+    }
+   ],
    "source": [
-    "# === SECTION: USER SETUP (PC/Windows) ===\n",
-    "# Uncomment below and edit these variables to match your Windows setup\n",
-    "# csv_folder = r\"C:\\Users\\YOUR_USERNAME\\Documents\\csvs\\arxiv_csv\"\n",
-    "# summary_folder = r\"C:\\Users\\YOUR_USERNAME\\Documents\\csvs\\summaries\"\n",
-    "\n",
-    "# === SECTION: USER SETUP (Mac) ===\n",
-    "# Uncomment below and edit these lines to match your Mac setup\n",
-    "csv_folder = r\"/Users/YOUR_USERNAME/Documents/csvs/arxiv_csv\"\n",
-    "summary_folder = r\"/Users/YOUR_USERNAME/Documents/csvs/summaries\"\n",
-    "\n",
-    "# === SECTION: FOLDER CREATION AND CHECK ===\n",
     "import os\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
     "\n",
+    "# Load .env variables\n",
+    "load_dotenv(find_dotenv())\n",
+    "\n",
+    "# Get folder paths and API key from environment variables\n",
+    "csv_folder = os.getenv(\"CSV_FOLDER\")\n",
+    "summary_folder = os.getenv(\"SUMMARY_FOLDER\")\n",
+    "\n",
+    "# This will create the folders (and parents) if they do NOT exist—does nothing if they do\n",
     "os.makedirs(csv_folder, exist_ok=True)\n",
     "os.makedirs(summary_folder, exist_ok=True)\n",
+    "\n",
+    "# Check that folders and API key are set\n",
     "missing = []\n",
     "if not os.path.isdir(csv_folder):\n",
     "    missing.append(\"CSV folder\")\n",
@@ -96,20 +112,41 @@
    "execution_count": null,
    "id": "87d22ada",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date range defined: 2016 to 3000\n",
+      "Date filter string defined: submittedDate:[201601010000 TO 300001010000]\n",
+      "Keyword groups, logic, and date filter defined.\n",
+      "Combined arXiv query: (keyword OR keyword) AND (keyword OR keyword) AND (keyword OR keyword) AND (keyword OR keyword) AND submittedDate:[201601010000 TO 300001010000]\n"
+     ]
+    }
+   ],
    "source": [
+    "# === SECTION: USER INPUT FOR DATE RANGE ===\n",
+    "start_year = 2016  # Example value\n",
+    "end_year = 3000    # Example value\n",
+    "\n",
+    "print(f\"Date range defined: {start_year} to {end_year}\")\n",
+    "\n",
     "# === SECTION: DEFINE KEYWORD GROUPS, LOGIC, AND DATE FILTER ===\n",
+    "# Exclusion criteria keywords will only applied to combined query at download stage\n",
     "groups = {\n",
     "    'group1': 'keyword OR keyword',\n",
-    "    'group2': 'keyword OR keyword AND keyword',\n",
-    "    'excluded': 'keyword or keyword' # exclusion will be applied at the download stage for arXiv API\n",
+    "    'group2': 'keyword OR keyword',\n",
+    "    'group3': 'keyword OR keyword',\n",
+    "    'group4': 'keyword OR keyword',\n",
+    "    'excluded': 'exclusion OR criteria' \n",
     "}\n",
     "\n",
     "# Date filter for time set onwards\n",
-    "date_filter = 'submittedDate:[201601010000 TO 300001010000]'\n",
+    "date_filter = f'submittedDate:[{start_year}01010000 TO {end_year}01010000]'\n",
+    "print(f\"Date filter string defined: {date_filter}\")\n",
     "\n",
     "# Combine logic and add date filter\n",
-    "logic = \"({group1}) AND ({group2}) AND {date_filter}\"\n",
+    "logic = \"({group1}) AND ({group2}) AND ({group3}) AND ({group4}) AND {date_filter}\"\n",
     "combined_query = logic.format(**groups, date_filter=date_filter)\n",
     "print(\"Keyword groups, logic, and date filter defined.\")\n",
     "print(\"Combined arXiv query:\", combined_query)"
@@ -117,10 +154,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a4cc04cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "INDIVIDUAL GROUP RESULTS:\n",
+      "==================================================\n",
+      "\n",
+      "GROUP: GROUP1\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:neuroimaging%20pipeline%20OR%20MRI%20processing%20OR%20neuroinformatics%20pipeline&start=0&max_results=1\n",
+      "Total results for group1: 458989\n",
+      "\n",
+      "GROUP: GROUP2\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:structural%20MRI%20OR%20T1-weighted%20OR%20T2-weighted%20OR%20low-field%20MRI%20OR%20portable%20MRI&start=0&max_results=1\n",
+      "Total results for group2: 453094\n",
+      "\n",
+      "GROUP: GROUP3\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:continuous%20integration%20OR%20continuous%20deployment%20OR%20CI/CD%20OR%20containerization%20OR%20containerisation%20OR%20version%20control%20OR%20cloud-based%20OR%20serverless%20OR%20distributed%20storage%20OR%20BIDS%20OR%20flywheel.io%20OR%20github%20OR%20gitlab%20OR%20reproducibility&start=0&max_results=1\n",
+      "Total results for group3: 1102006\n",
+      "\n",
+      "GROUP: GROUP4\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:brain%20OR%20neuroimaging&start=0&max_results=1\n",
+      "Total results for group4: 17399\n",
+      "\n",
+      "GROUP: EXCLUDED\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:fMRI%20OR%20EEG%20OR%20MEG%20OR%20functional%20connectivity%20OR%20clinical%20trial&start=0&max_results=1\n",
+      "Total results for excluded: 670895\n",
+      "\n",
+      "==================================================\n",
+      "COMBINED LOGIC RESULTS:\n",
+      "==================================================\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:%28neuroimaging%20pipeline%20OR%20MRI%20processing%20OR%20neuroinformatics%20pipeline%29%20AND%20%28structural%20MRI%20OR%20T1-weighted%20OR%20T2-weighted%20OR%20low-field%20MRI%20OR%20portable%20MRI%29%20AND%20%28continuous%20integration%20OR%20continuous%20deployment%20OR%20CI/CD%20OR%20containerization%20OR%20containerisation%20OR%20version%20control%20OR%20cloud-based%20OR%20serverless%20OR%20distributed%20storage%20OR%20BIDS%20OR%20flywheel.io%20OR%20github%20OR%20gitlab%20OR%20reproducibility%29%20AND%20%28brain%20OR%20neuroimaging%29%20AMD%20submittedDate%3A%5B201601010000%20TO%20300001010000%5D&start=0&max_results=1\n",
+      "Total results for combined query: 1830\n"
+     ]
+    }
+   ],
    "source": [
     "# === SECTION: RUN ARXIV QUERY AND RETURN TOTAL RESULTS FOR EACH GROUP AND COMBINED QUERY ===\n",
     "import urllib.parse\n",
@@ -166,10 +240,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e28fd501",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "FIRST 10 TITLES FOR GROUP: GROUP1\n",
+      "==================================================\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:neuroimaging%20pipeline%20OR%20MRI%20processing%20OR%20neuroinformatics%20pipeline&start=0&max_results=10\n",
+      "1. Machine Learning pipeline for discovering neuroimaging-based biomarkers   in neurology and psychiatry\n",
+      "2. An Analysis of Performance Bottlenecks in MRI Pre-Processing\n",
+      "3. CompressedMediQ: Hybrid Quantum Machine Learning Pipeline for   High-Dimensional Neuroimaging Data\n",
+      "4. Pipeline-Invariant Representation Learning for Neuroimaging\n",
+      "5. The Developing Human Connectome Project: A Fast Deep Learning-based   Pipeline for Neonatal Cortical Surface Reconstruction\n",
+      "6. JUMP: A joint multimodal registration pipeline for neuroimaging with   minimal preprocessing\n",
+      "7. Clinica: an open source software platform for reproducible clinical   neuroscience studies\n",
+      "8. FastSurfer -- A fast and accurate deep learning based neuroimaging   pipeline\n",
+      "9. Mitigating analytical variability in fMRI results with style transfer\n",
+      "10. Minimal Specifications for Non-Human Primate MRI: Challenges in   Standardizing and Harmonizing Data Collection\n",
+      "\n",
+      "==================================================\n",
+      "FIRST 10 TITLES FOR GROUP: GROUP2\n",
+      "==================================================\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:structural%20MRI%20OR%20T1-weighted%20OR%20T2-weighted%20OR%20low-field%20MRI%20OR%20portable%20MRI&start=0&max_results=10\n",
+      "1. MR imaging in the low-field: Leveraging the power of machine learning\n",
+      "2. From Low Field to High Value: Robust Cortical Mapping from Low-Field MRI\n",
+      "3. Lung Imaging with UTE MRI\n",
+      "4. Synthetic Low-Field MRI Super-Resolution Via Nested U-Net Architecture\n",
+      "5. Joint CS-MRI Reconstruction and Segmentation with a Unified Deep Network\n",
+      "6. Deep Attentive Wasserstein Generative Adversarial Networks for MRI   Reconstruction with Recurrent Context-Awareness\n",
+      "7. Portable simulation framework for diffusion MRI\n",
+      "8. Unpaired MRI Super Resolution with Contrastive Learning\n",
+      "9. 7 Tesla multimodal MRI dataset of ex-vivo human brain\n",
+      "10. Accelerated respiratory-resolved 4D-MRI with separable spatio-temporal   neural networks\n",
+      "\n",
+      "==================================================\n",
+      "FIRST 10 TITLES FOR GROUP: GROUP3\n",
+      "==================================================\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:continuous%20integration%20OR%20continuous%20deployment%20OR%20CI/CD%20OR%20containerization%20OR%20containerisation%20OR%20version%20control%20OR%20cloud-based%20OR%20serverless%20OR%20distributed%20storage%20OR%20BIDS%20OR%20flywheel.io%20OR%20github%20OR%20gitlab%20OR%20reproducibility&start=0&max_results=10\n",
+      "1. A First Look at CI/CD Adoptions in Open-Source Android Apps\n",
+      "2. CI/CD Configuration Practices in Open-Source Android Apps: An Empirical   Study\n",
+      "3. Analyzing the Effects of CI/CD on Open Source Repositories in GitHub and   GitLab\n",
+      "4. Ambush from All Sides: Understanding Security Threats in Open-Source   Software CI/CD Pipelines\n",
+      "5. Enhancing Software Supply Chain Security Through STRIDE-Based Threat   Modelling of CI/CD Pipelines\n",
+      "6. On Continuous Integration / Continuous Delivery for Automated Deployment   of Machine Learning Models using MLOps\n",
+      "7. Exploring the Impact of Integrating UI Testing in CI/CD Workflows on   GitHub\n",
+      "8. A Systematic Literature Review on Continuous Integration and Deployment   (CI/CD) for Secure Cloud Computing\n",
+      "9. Automating the Training and Deployment of Models in MLOps by Integrating   Systems with Machine Learning\n",
+      "10. The GitHub Development Workflow Automation Ecosystems\n",
+      "\n",
+      "==================================================\n",
+      "FIRST 10 TITLES FOR GROUP: GROUP4\n",
+      "==================================================\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:brain%20OR%20neuroimaging&start=0&max_results=10\n",
+      "1. Empowering Functional Neuroimaging: A Pre-trained Generative Framework   for Unified Representation of Neural Signals\n",
+      "2. CATD: Unified Representation Learning for EEG-to-fMRI Cross-Modal   Generation\n",
+      "3. Interpretability of Multivariate Brain Maps in Brain Decoding:   Definition and Quantification\n",
+      "4. A Review on Image- and Network-based Brain Data Analysis Techniques for   Alzheimer's Disease Diagnosis Reveals a Gap in Developing Predictive Methods   for Prognosis\n",
+      "5. Probabilistic prediction of neurological disorders with a statistical   assessment of neuroimaging data modalities\n",
+      "6. Drowsiness detection using combined neuroimaging: Overview and   Challenges\n",
+      "7. Diffusion Models for Computational Neuroimaging: A Survey\n",
+      "8. A Domain Guided CNN Architecture for Predicting Age from Structural   Brain Images\n",
+      "9. ERNet: Unsupervised Collective Extraction and Registration in   Neuroimaging Data\n",
+      "10. Multiple Comparison Procedures for Neuroimaging Genomewide Association   Studies\n",
+      "\n",
+      "==================================================\n",
+      "FIRST 10 TITLES FOR GROUP: EXCLUDED\n",
+      "==================================================\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:fMRI%20OR%20EEG%20OR%20MEG%20OR%20functional%20connectivity%20OR%20clinical%20trial&start=0&max_results=10\n",
+      "1. A three domain covariance framework for EEG/MEG data\n",
+      "2. Combined MEG and fMRI Exponential Random Graph Modeling for inferring   functional Brain Connectivity\n",
+      "3. Towards Neural Foundation Models for Vision: Aligning EEG, MEG, and fMRI   Representations for Decoding, Encoding, and Modality Conversion\n",
+      "4. Dynamic EEG-fMRI mapping: Revealing the relationship between brain   connectivity and cognitive state\n",
+      "5. Classification of weak multi-view signals by sharing factors in a   mixture of Bayesian group factor analyzers\n",
+      "6. Emotion self-regulation training in major depressive disorder using   simultaneous real-time fMRI and EEG neurofeedback\n",
+      "7. A comparison of single-trial EEG classification and EEG-informed fMRI   across three MR compatible EEG recording systems\n",
+      "8. Effects of simultaneous real-time fMRI and EEG neurofeedback in major   depressive disorder evaluated with brain electromagnetic tomography\n",
+      "9. Scaling laws for decoding images from brain activity\n",
+      "10. Normative brain mapping using scalp EEG and potential clinical   application\n"
+     ]
+    }
+   ],
    "source": [
     "# === SECTION: PRINT FIRST 10 TITLES FOR EACH GROUP ===\n",
     "for name, query in groups.items():\n",
@@ -195,10 +351,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f5d8febb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "FIRST 10 TITLES FOR COMBINED QUERY:\n",
+      "==================================================\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:%28neuroimaging%20pipeline%20OR%20MRI%20processing%20OR%20neuroinformatics%20pipeline%29%20AND%20%28structural%20MRI%20OR%20T1-weighted%20OR%20T2-weighted%20OR%20low-field%20MRI%20OR%20portable%20MRI%29%20AND%20%28continuous%20integration%20OR%20continuous%20deployment%20OR%20CI/CD%20OR%20containerization%20OR%20containerisation%20OR%20version%20control%20OR%20cloud-based%20OR%20serverless%20OR%20distributed%20storage%20OR%20BIDS%20OR%20flywheel.io%20OR%20github%20OR%20gitlab%20OR%20reproducibility%29%20AND%20%28brain%20OR%20neuroimaging%29%20AMD%20submittedDate%3A%5B201601010000%20TO%20300001010000%5D&start=0&max_results=10\n",
+      "1. Clinica: an open source software platform for reproducible clinical   neuroscience studies\n",
+      "2. FastSurferVINN: Building Resolution-Independence into Deep Learning   Segmentation Methods -- A Solution for HighRes Brain MRI\n",
+      "3. The Developing Human Connectome Project: A Fast Deep Learning-based   Pipeline for Neonatal Cortical Surface Reconstruction\n",
+      "4. Minimal Specifications for Non-Human Primate MRI: Challenges in   Standardizing and Harmonizing Data Collection\n",
+      "5. Synthesizing PET images from High-field and Ultra-high-field MR images   Using Joint Diffusion Attention Model\n",
+      "6. Benchmarking the Reproducibility of Brain MRI Segmentation Across   Scanners and Time\n",
+      "7. CompressedMediQ: Hybrid Quantum Machine Learning Pipeline for   High-Dimensional Neuroimaging Data\n",
+      "8. Detecting Schizophrenia with 3D Structural Brain MRI Using Deep Learning\n",
+      "9. Residual and Plain Convolutional Neural Networks for 3D Brain MRI   Classification\n",
+      "10. An Explainable Diagnostic Framework for Neurodegenerative Dementias via   Reinforcement-Optimized LLM Reasoning\n"
+     ]
+    }
+   ],
    "source": [
     "# === SECTION: PRINT FIRST 10 TITLES FOR COMBINED QUERY ===\n",
     "print(\"\\n\" + \"=\"*50)\n",
@@ -222,10 +400,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fa622120",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing results to CSV: C:/Users/petra/Documents/UniKCL/Workshop/csvs/arxiv_v1.csv\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:%28neuroimaging%20pipeline%20OR%20MRI%20processing%20OR%20neuroinformatics%20pipeline%29%20AND%20%28structural%20MRI%20OR%20T1-weighted%20OR%20T2-weighted%20OR%20low-field%20MRI%20OR%20portable%20MRI%29%20AND%20%28continuous%20integration%20OR%20continuous%20deployment%20OR%20CI/CD%20OR%20containerization%20OR%20containerisation%20OR%20version%20control%20OR%20cloud-based%20OR%20serverless%20OR%20distributed%20storage%20OR%20BIDS%20OR%20flywheel.io%20OR%20github%20OR%20gitlab%20OR%20reproducibility%29%20AND%20%28brain%20OR%20neuroimaging%29%20AMD%20submittedDate%3A%5B201601010000%20TO%20300001010000%5D&start=0&max_results=100\n",
+      "Total results found: 1830\n",
+      "Progress: Downloaded 87 / 1830\n",
+      "Querying arXiv: http://export.arxiv.org/api/query?search_query=all:%28neuroimaging%20pipeline%20OR%20MRI%20processing%20OR%20neuroinformatics%20pipeline%29%20AND%20%28structural%20MRI%20OR%20T1-weighted%20OR%20T2-weighted%20OR%20low-field%20MRI%20OR%20portable%20MRI%29%20AND%20%28continuous%20integration%20OR%20continuous%20deployment%20OR%20CI/CD%20OR%20containerization%20OR%20containerisation%20OR%20version%20control%20OR%20cloud-based%20OR%20serverless%20OR%20distributed%20storage%20OR%20BIDS%20OR%20flywheel.io%20OR%20github%20OR%20gitlab%20OR%20reproducibility%29%20AND%20%28brain%20OR%20neuroimaging%29%20AMD%20submittedDate%3A%5B201601010000%20TO%20300001010000%5D&start=100&max_results=100\n",
+      "Downloaded 87 records to C:/Users/petra/Documents/UniKCL/Workshop/csvs/arxiv_v1.csv\n",
+      "Summary row added for arxiv_v1\n"
+     ]
+    }
+   ],
    "source": [
     "# === SECTION: EXPORT ARXIV RESULTS TO CSV (ALL RESULTS, WITH EXCLUSION) ===\n",
     "\n",
@@ -344,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
